  version of the documentation. Patch by Matthias Bussonnier.

- Issue #12067: Rewrite Comparisons section in the Expressions chapter of the
  language reference. Some of the details of comparing mixed types were
  incorrect or ambiguous. Added default behaviour and consistency suggestions
  for user-defined classes. Based on patch from Andy Maier.

Build
-----

- bpo-27593: sys.version and the platform module python_build(),
  python_branch(), and python_revision() functions now use
  git information rather than hg when building from a repo.

- bpo-29643: Fix ``--enable-optimization`` configure option didn't work.

- bpo-29572: Update Windows build and OS X installers to use OpenSSL 1.0.2k.

- Issue #28768: Fix implicit declaration of function _setmode. Patch by
  Masayuki Yamamoto

Tests
-----

- bpo-30236: Backported test.regrtest options -m/--match and -G/--failfast
  from Python 3.

- bpo-30223: To unify running tests in Python 2.7 and Python 3, the test
  package can be run as a script.  This is equivalent to running the
  test.regrtest module as a script.

- bpo-30207: To simplify backports from Python 3, the test.test_support
  module was converted into a package and renamed to test.support.  The
  test.script_helper module was moved into the test.support package.
  Names test.test_support and test.script_helper are left as aliases to
  test.support and test.support.script_helper.

- bpo-30197: Enhanced function swap_attr() in the test.test_support module.
  It now works when delete replaced attribute inside the with statement.  The
  old value of the attribute (or None if it doesn't exist) now will be
  assigned to the target of the "as" clause, if there is one.
  Also backported function swap_item().

- bpo-28087: Skip test_asyncore and test_eintr poll failures on macOS.
  Skip some tests of select.poll when running on macOS due to unresolved
  issues with the underlying system poll function on some macOS versions.
